[refs #42] Completed adding in all of the Facebook, Twitter and Wikipedia links for all of the bands/artists listed in the music section. Checked how it all looks on various screen types, and made all the necessary Bootstrap & CSS adjustments to ensure good readability and clickability. Fixed a couple of other little Bootstrap/CSS bugs I noticed right on the border between the "xs", iPad, and "sm" screen sizes.

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,10 @@
 		background-size: cover;
 		background-attachment: fixed;		
 	}
+}
+
+@media only screen and (min-width: 768px)
+{
 	#profilePic
 	{
 		padding-bottom: 15px;
@@ -46,6 +50,10 @@
 	{
 		background-size: 100% auto;
 	}
+}
+
+@media only screen and (max-width: 767px)
+{
 	#social_mob
 	{
 		padding: 0px 15px 0px 15px;
@@ -195,6 +203,22 @@
 		float: left;
 		width: 50%;
 	}
+	.musicItem
+	{
+		float: left;
+		width: 100%;
+	}
+	.bandsocial, .venuesocial
+	{
+		float: left;
+		width: 50%;
+	}
+	.bandwiki, .venuelink
+	{
+		float: left;
+		width: 50%;
+	}
+
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px)
@@ -203,6 +227,21 @@
 	{
 		float: left;
 		width: 33.33333333%;
+	}
+	.musicItem
+	{
+		float: left;
+		width: 50%;
+	}
+	.bandsocial, .venuesocial
+	{
+		float: left;
+		width: 50%;
+	}
+	.bandwiki, .venuelink
+	{
+		float: left;
+		width: 50%;
 	}
 }
 
@@ -241,7 +280,12 @@
 	color: black !important;
 }
 
+.musicItem a
+{
+	color: yellow;
+}
+
 .musicItem:hover
 {
-	background: yellow;
+	background: #55acee;
 }
